Simplify web/blob build
This merges web/Makefile and web/blob/Makefile, where the former's sole
purpose was to call the latter.

The the blob-stamp file can cause issues if it's present, but not the
blob/files.go file. As only the latter is the real dependency for the
build process, this indirection caused me some minutes to understand
why the build process was broken (don't ask me why I deleted files.go).
It can aslo be noted that all dependencies for blob/files.go are
outside of the blob/ directory, so the separation isn't even logically
necessary.

The initial Makefile setup has been added in 3e97a36.

--- a/web/Makefile
+++ b/web/Makefile
@@ -11,14 +11,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-all: blob-stamp
+include ../Makefile.INCLUDE
 
-blob-stamp: templates/*
-	$(MAKE) -C blob
-	touch $@
+all: blob/files.go
+
+SUFFIXES:
+
+blob/files.go: $(shell find templates/ static/ -type f)
+	../utility/embed-static.sh static templates | $(GOFMT) > $@
 
 clean:
-	$(MAKE) -C blob clean
-	-rm -f *-stamp
+	-rm -f blob/files.go
 
 .PHONY: clean
